<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="enter_something">Enter Something</string>
    <string name="display">Display</string>
    <string name="textview">TextView</string>
    <string name="display_what_user_enters">Display what user enters</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="disable">Disable</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>